--- a/styles.css
+++ b/styles.css
@@ -1,86 +1,122 @@
 * {
     box-sizing: border-box;
-    margin: 0;
 }
 body {
-    background-color: hsl(0, 0%, 8%);
-    font-size: 14px;
-    cursor: pointer;
+    background-color: hsl(30, 54%, 90%);
+    font: 16px "outfit", sans-serif;
+    color: hsl(30, 10%, 34%) /*Wenge brown*/
+    
 }
-.container1 {
-   max-height: 34.5rem;
-   max-width: 27rem;
-   margin-inline: auto;
-   padding-top: 8rem;    
-}
-.container2 {
-    background-color: hsl(0, 0%, 12%);
+img {
+    max-width: 100%;
     border-radius: 1rem;
-    height: 34.5rem;
-    width: 25rem;
-    text-align: center;  
-    font-family: inter, san serif;
-    margin: 1rem;
+    margin-top: 2rem;
 }
-
-img {    
-    background-color: hsl(0, 0%, 12%);
-    width: 5rem;
-    height: 5rem;
-    border-radius: 10rem;
-    margin: 2rem 0;
+.width {
+    max-width: 45rem;
+    margin-inline: auto;
+    padding: 0 2rem;
+    background-color: white;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    border-radius: 2rem;
 }
-h2 {
-    background-color: hsl(0, 0%, 12%);
-    color: white;
+ul {
+    display: grid;
+    gap: 1rem;
+}
+ol {
+    display: grid;
+    gap: 1rem;
+}
+ul li::marker {
+    color: hsl(332, 51%, 32%);/*Dark raspberry*/
+    font-size: small;
+}
+ol li::marker {
+    color: hsl(332, 51%, 32%);/*Dark raspberry*/  
     font-weight: 600;
 }
-h5 {
-    background-color: hsl(0, 0%, 12%);
-    color: hsl(75, 94%, 57%);
+h1 {
+    font-family: young serif;
+    color: hsl(24, 5%, 18%);/* Dark Charcoal */
+    font-weight: 400;
+}
+h3 {
+    color: hsl(332, 51%, 32%); /*Dark raspberry*/
     font-weight: 700;
+}
+.prep {
+    background-color: hsl(332, 51%, 32%, .125);/*Dark raspberry*/
+    border-radius: 1rem;
+    padding: 1rem;
+}
+.list1 {
+    padding-left: 1.5rem;
+}
+.list1 li {
+    padding-left: 1rem;
+}
+h2 {
+    font-family: young serif;
+    color: hsl(14, 45%, 36%);
+    font-weight: 400;
+}
+.list2 {
+    padding-left: 1.25rem;
+}
+.list2 li {
+    padding-left: 1rem;
+}
+.ingredients {
+    border-bottom: 1px solid hsl(30, 18%, 87%);
+}
+.list3 {
+    padding-left: 1.25rem; 
+}
+.list3 li {
+    padding-left: 1rem;
+}
+.instructions {
+    border-bottom: 1px solid hsl(30, 18%, 87%);
+}
+table {
+    width: 100%;
+}
+tr > * {
     padding: .75rem;
 }
-#title {
-    background-color: hsl(0, 0%, 12%);
-    color: white;
-    font-size: smaller;
-    padding: 1rem; 
+.row1 {
+    text-indent: 1.35rem;
 }
-a {
-    color: white;
-    text-decoration: none;
+.row2 {
+    width: 55%;
+    text-indent: 1.75rem;
+    color: hsl(14, 45%, 36%);
+    font-weight: 600;
 }
-.links {
-    display: flex;
-    align-items: center;  
-    flex-direction: column;
+tr:not(:last-child) > *{
+    border-bottom: 1px solid hsl(30, 18%, 87%);
 }
-.links > div {
-    background-color: hsl(0, 0%, 20%);
-    color: white;
+.endtitle {
     text-align: center;
-    border-radius: .5rem;
-    width: 20rem;
-    line-height: 2.25rem;
-    margin: .5rem;
 }
-.links :hover{
-    background-color: hsl(75, 94%, 57%);
-    color: black;
-    cursor: pointer;
+@media screen and (max-width: 575px) {
+    body {
+        background-color: white;
+    }
+    .width{
+        padding: 0;
+        margin: 0;
+    }
+    img {
+        border-radius: 0;
+        margin-top: 0;
+    }
+    body {
+        margin: 0;
+    }
+    .container2 {
+        margin: 0 2rem;
+    }
 }
-.attribution {
-    color: white;
-    text-align: center; 
-}
-a{
-    color:blue;
-}
-@media  (max-width: 470px) {
-.container2 {
-    margin: 1rem;
-}
-
-}
-    
